# UUID

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: MauUUIDConfig.cmake.in
example/: CMakeLists.txt  main.cpp
include/: uuid.h
tests/: CMakeLists.txt  test_uuid.cpp
